# elisa

./: .gitignore  LICENSE  README.md  pyproject.toml  readme_test.md
.github/workflows/: docs.yml
docs/: conf.py  index.rst  installation.rst  quickstart.rst
docs/_build/doctrees/: api.doctree  environment.pickle  index.doctree  installation.doctree  quickstart.doctree
docs/_build/html/: .buildinfo  api.html  genindex.html  index.html  installation.html  objects.inv  py-modindex.html  quickstart.html  search.html  searchindex.js
docs/_build/html/_modules/: index.html
docs/_build/html/_modules/elisa/mcmc/: elisa.html  extinction.html  interpolator.html  posterior.html  utils.html
docs/_build/html/_modules/elisa/query/: data.html
docs/_build/html/_sources/: api.rst.txt  index.rst.txt  quickstart.rst.txt
elisa/: __init__.py
elisa/mcmc/: download.py  elisa.py  extinction.py  interpolator.py  posterior.py  utils.py
elisa/query/: data.py
elisa/sbi/: binary.py
notebooks/: mcmc.ipynb  query.ipynb
tests/: conftest.py  test_elisa.py  test_extinction.py  test_interpolator.py  test_posterior.py  test_utils.py
