[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "elisa"
version = "0.1.0"
description = "Efficient Likelihood Inference for Stellar Ages - Bayesian inference of stellar cluster parameters using isochrone fitting"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Jeison Steven Alfonso", email = "je.alfonso1@uniandes.edu.co"}
]
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Astronomy",
]
keywords = ["astronomy", "stellar", "isochrones", "bayesian", "mcmc", "clusters"]

dependencies = [
    "numpy>=1.20",
    "pandas>=1.3",
    "scipy>=1.7",
    "emcee>=3.0",
    "matplotlib>=3.4",
    "pyarrow>=8.0",
    "astroquery>=0.4",
    "corner>=2.2",
]

[project.optional-dependencies]
download = [
    "ezpadova>=1.0",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "ruff>=0.1",
]
docs = [
    "sphinx>=6.0",
    "sphinx-rtd-theme>=1.0",
]
all = [
    "elisa[download]",
    "jupyter>=1.0",
]

[project.urls]
Homepage = "https://github.com/stevenalfonso/elisa"
Documentation = "https://astroelisa.readthedocs.io"
Repository = "https://github.com/stevenalfonso/elisa"
Issues = "https://github.com/stevenalfonso/elisa/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["elisa*"]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311", "py312"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
